2004-05-26  Chloe Lewis <ai@kldp.org>
	* hanja-sanity.pl: 기본 동작으로 두음법칙을 고려하여 출력하고,
	옵션으로 -v 를 사용하면 모든 잘못되었음직한 항목을 보이도록 수정

2004-05-21  Chloe Lewis <ai@kldp.org>
	* nabi-hanja.txt: Unihan-4.0.1.txt 로 이전

2004-05-16  Choe Hwanjin <krisna@kldp.org>
	* nabi-symbol.txt, nabi.txt: http://micsland.com/phps/key.php 여기에
	있는 표대로 심벌 문자 배치를 변경

2004-05-07  Choe Hwanjin <krisna@kldp.org>
	* start ChangeLog for hanja dictionary file
	* add hanja-merge.py, hanja-gettext.py script